fix: sidebar gap

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -27,7 +27,9 @@ a {
 .MuiAccordionDetails-root {
   padding: 0 !important;
 }
-
+.MuiAccordionSummary-root {
+  padding: 0 25px !important;
+}
 .MuiAccordion-root:before {
   height: 0px !important;
 }
